--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@storybook/addon-interactions": "^8.0.8",
     "@storybook/addon-links": "^8.0.8",
     "@storybook/addon-onboarding": "^8.0.8",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/blocks": "^8.0.8",
     "@storybook/react": "^8.0.8",
     "@storybook/react-vite": "^8.0.8",
@@ -41,6 +42,7 @@
     "eslint-plugin-storybook": "^0.8.0",
     "jsdom": "^24.0.0",
     "postcss": "^8.4.38",
+    "postcss-loader": "^8.1.1",
     "storybook": "^8.0.8",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
